# pcc-kit

./: CMakeLists.txt  README.md  asm_arm64.cpp  asm_arm64.h  ast.h  bin_arm64.h  config.h.in  lexer.cpp  lexer.h  main.cpp  mir.cpp  mir.h  optimization.cpp  syntaxer.cpp  syntaxer.h  test.cpp  token.h
compiler/: ast.h  lexer.cpp  lexer.h  mir.cpp  mir.h  optimization.cpp  optimization.h  preprocessor.cpp  preprocessor.h  syntaxer.cpp  syntaxer.h  token.h
docs/: micro_cc_syntax.md
file/: file.cpp  file.h
generator/: asm_arm64.cpp  asm_arm64.h  assembler.cpp  assembler.h  assembler_arm64.cpp  assembler_arm64.h  bin_arm64.cpp  bin_arm64.h  binary_arm64.cpp  binary_arm64.h  register_arm64.h
generator/arm64/: assembler_arm64.cpp  assembler_arm64.h  binary_arm64.cpp  binary_arm64.h  internal_func_arm64.cpp  internal_func_arm64.h  linux_syscall.cpp  linux_syscall.h  macos_syscall.cpp  macos_syscall.h  register_arm64.cpp  register_arm64.h  windows_syscall.cpp  windows_syscall.h
include/: linux_aarch64_syscall.h
logger/: logger.cpp  logger.h
memory/: mspace.cpp  mspace.h
test/: test_adrp.c  test_syscall_read.c  test_syscall_write.c
utils/: stack.c  stack.h
wrapper/: elf.cpp  elf.h  macho.cpp  macho.h  pe.cpp  pe.h  pe_dos_header.h
